--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2014-01-07  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/InternalError/classInfo/InstanceOf.java:
+	* testlet/java/lang/InternalError/classInfo/getAnnotation.java:
+	* testlet/java/lang/InternalError/classInfo/getAnnotations.java:
+	* testlet/java/lang/InternalError/classInfo/getCanonicalName.java:
+	* testlet/java/lang/InternalError/classInfo/getClasses.java:
+	Added five new tests into InternalError.
+
 2014-01-06  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/InternalError/TryCatch.java:
