--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2014-01-20  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/LinkageError/classInfo/InstanceOf.java:
+	* testlet/java/lang/LinkageError/classInfo/getAnnotation.java:
+	* testlet/java/lang/LinkageError/classInfo/getAnnotations.java:
+	* testlet/java/lang/LinkageError/classInfo/getCanonicalName.java:
+	* testlet/java/lang/LinkageError/classInfo/getClasses.java:
+	* testlet/java/lang/LinkageError/classInfo/getComponentType.java:
+	* testlet/java/lang/LinkageError/classInfo/getConstructor.java:
+	Added seven new tests into LinkageError.
+
 2014-01-17  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/LinkageError/TryCatch.java:
