--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2014-01-22  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/LinkageError/classInfo/getConstructors.java:
+	* testlet/java/lang/LinkageError/classInfo/getDeclaredAnnotations.java:
+	* testlet/java/lang/LinkageError/classInfo/getDeclaredClasses.java:
+	* testlet/java/lang/LinkageError/classInfo/getDeclaredConstructor.java:
+	* testlet/java/lang/LinkageError/classInfo/getDeclaredConstructors.java:
+	Added five new tests into LinkageError.
+
 2014-01-20  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/LinkageError/classInfo/InstanceOf.java:
