--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2014-02-07  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/NegativeArraySizeException/classInfo/getAnnotation.java:
+	* testlet/java/lang/NegativeArraySizeException/classInfo/getAnnotations.java:
+	* testlet/java/lang/NegativeArraySizeException/classInfo/getCanonicalName.java:
+	* testlet/java/lang/NegativeArraySizeException/classInfo/getClasses.java:
+	* testlet/java/lang/NegativeArraySizeException/classInfo/getComponentType.java:
+	* testlet/java/lang/NegativeArraySizeException/classInfo/getEnclosingConstructor.java:
+	Yet added another six new tests into NegativeArraySizeException/classInfo.
+
 2014-02-06  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/NegativeArraySizeException/classInfo/getConstructor.java:
