--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2014-02-12  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/NegativeArraySizeException/classInfo/getPackage.java:
+	* testlet/java/lang/NegativeArraySizeException/classInfo/getSimpleName.java:
+	* testlet/java/lang/NegativeArraySizeException/classInfo/getSuperclass.java:
+	* testlet/java/lang/NegativeArraySizeException/classInfo/isAssignableFrom.java:
+	Updated existing tests, make these tests to work correctly with
+	OpenJDK7, added JDK tags etc.
+
 2014-02-11  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/NegativeArraySizeException/classInfo/isInstance.java:
