--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2014-02-13  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/NegativeArraySizeException/classInfo/isAnnotation.java:
+	* testlet/java/lang/NegativeArraySizeException/classInfo/isAnnotationPresent.java:
+	* testlet/java/lang/NegativeArraySizeException/classInfo/isAnonymousClass.java:
+	* testlet/java/lang/NegativeArraySizeException/classInfo/isArray.java:
+	* testlet/java/lang/NegativeArraySizeException/classInfo/isEnum.java:
+	Added five new tests into NegativeArraySizeException/classInfo.
+
 2014-02-12  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/NegativeArraySizeException/classInfo/getPackage.java:
