--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2014-02-24  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/NoClassDefFoundError/TryCatch.java:
+	* testlet/java/lang/NoClassDefFoundError/constructor.java:
+	Two new tests added into NoClassDefFoundError/classInfo.
+
 2014-02-13  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/NegativeArraySizeException/classInfo/isAnnotation.java:
