--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2014-03-03  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/NoClassDefFoundError/classInfo/getInterfaces.java:
+	* testlet/java/lang/NoClassDefFoundError/classInfo/getMethod.java:
+	* testlet/java/lang/NoClassDefFoundError/classInfo/getMethods.java:
+	* testlet/java/lang/NoClassDefFoundError/classInfo/getModifiers.java:
+	* testlet/java/lang/NoClassDefFoundError/classInfo/getName.java:
+	Added five new tests into NoClassDefFoundError/classInfo.
+
 2014-02-28  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/NoClassDefFoundError/classInfo/getDeclaredField.java:
