--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2014-03-07  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/NoClassDefFoundError/classInfo/isInterface.java:
+	* testlet/java/lang/NoClassDefFoundError/classInfo/isLocalClass.java:
+	* testlet/java/lang/NoClassDefFoundError/classInfo/isMemberClass.java:
+	* testlet/java/lang/NoClassDefFoundError/classInfo/isPrimitive.java:
+	* testlet/java/lang/NoClassDefFoundError/classInfo/isSynthetic.java:
+	Added five new tests into NoClassDefFoundError/classInfo.
+
 2014-03-04  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/NoClassDefFoundError/classInfo/getPackage.java:
