--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2014-03-10  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/NoClassDefFoundError/classInfo/getEnclosingClass.java:
+	* testlet/java/lang/NoClassDefFoundError/classInfo/getEnclosingConstructor.java:
+	* testlet/java/lang/NoClassDefFoundError/classInfo/isAnonymousClass.java:
+	* testlet/java/lang/NoClassDefFoundError/classInfo/isArray.java:
+	* testlet/java/lang/NoClassDefFoundError/classInfo/isAssignableFrom.java:
+	Added another five new tests into NoClassDefFoundError/classInfo.
+
 2014-03-07  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/NoClassDefFoundError/classInfo/isInterface.java:
