--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2014-03-24  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/NoSuchFieldError/classInfo/getSuperclass.java:
+	* testlet/java/lang/NoSuchFieldError/classInfo/isAssignableFrom.java:
+	* testlet/java/lang/NoSuchFieldError/classInfo/isInstance.java:
+	Updated existing tests, make these tests to work correctly with
+	OpenJDK7, added JDK tags etc.
+
 2014-03-21  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/NoSuchFieldError/classInfo/isAnnotation.java:
