--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2014-04-01  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/NoSuchFieldException/classInfo/getConstructors.java:
+	* testlet/java/lang/NoSuchFieldException/classInfo/getDeclaredAnnotations.java:
+	* testlet/java/lang/NoSuchFieldException/classInfo/getDeclaredClasses.java:
+	* testlet/java/lang/NoSuchFieldException/classInfo/getDeclaredConstructor.java:
+	* testlet/java/lang/NoSuchFieldException/classInfo/getDeclaredConstructors.java:
+	Added five new tests into NoSuchFieldException/classInfo.
+
 2014-03-27  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/NoSuchFieldException/classInfo/getDeclaredField.java:
