--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2014-04-08  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/NoSuchMethodError/classInfo/getDeclaredField.java:
+	* testlet/java/lang/NoSuchMethodError/classInfo/getDeclaredFields.java:
+	* testlet/java/lang/NoSuchMethodError/classInfo/getDeclaredMethod.java:
+	* testlet/java/lang/NoSuchMethodError/classInfo/getDeclaredMethods.java:
+	* testlet/java/lang/NoSuchMethodError/classInfo/getDeclaringClass.java:
+	* testlet/java/lang/NoSuchMethodError/classInfo/getEnclosingClass.java:
+	Added six new tests into NoSuchMethodError/classInfo.
+
 2014-04-07  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/NoSuchMethodError/TryCatch.java:
