--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2014-04-09  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/NoSuchMethodError/classInfo/getConstructor.java:
+	* testlet/java/lang/NoSuchMethodError/classInfo/getConstructors.java:
+	* testlet/java/lang/NoSuchMethodError/classInfo/getField.java:
+	* testlet/java/lang/NoSuchMethodError/classInfo/getFields.java:
+	* testlet/java/lang/NoSuchMethodError/classInfo/getMethod.java:
+	* testlet/java/lang/NoSuchMethodError/classInfo/getMethods.java:
+	Added another six new tests into NoSuchMethodError/classInfo.
+
 2014-04-08  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/NoSuchMethodError/classInfo/getDeclaredField.java:
