--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2014-04-15  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/NoSuchMethodError/classInfo/isAnnotation.java:
+	* testlet/java/lang/NoSuchMethodError/classInfo/isAnnotationPresent.java:
+	* testlet/java/lang/NoSuchMethodError/classInfo/isAnonymousClass.java:
+	* testlet/java/lang/NoSuchMethodError/classInfo/isArray.java:
+	* testlet/java/lang/NoSuchMethodError/classInfo/isEnum.java:
+	Five new tests added into NoSuchMethodError/classInfo.
+
 2014-04-14  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/NoSuchMethodError/classInfo/getDeclaredClasses.java:
