--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2014-04-22  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/NoSuchMethodException/classInfo/getAnnotation.java:
+	* testlet/java/lang/NoSuchMethodException/classInfo/getAnnotations.java:
+	* testlet/java/lang/NoSuchMethodException/classInfo/getCanonicalName.java:
+	* testlet/java/lang/NoSuchMethodException/classInfo/getClasses.java:
+	* testlet/java/lang/NoSuchMethodException/classInfo/getComponentType.java:
+	* testlet/java/lang/NoSuchMethodException/classInfo/getConstructor.java:
+	Five new tests added into NoSuchMethodException/classInfo.
+
 2014-04-17  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/NoSuchMethodException/TryCatch.java:
