--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2014-04-25  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/NoSuchMethodException/classInfo/getAnnotation.java:
+	* testlet/java/lang/NoSuchMethodException/classInfo/getAnnotations.java:
+	* testlet/java/lang/NoSuchMethodException/classInfo/getCanonicalName.java:
+	* testlet/java/lang/NoSuchMethodException/classInfo/getClasses.java:
+	* testlet/java/lang/NoSuchMethodException/classInfo/getComponentType.java:
+	* testlet/java/lang/NoSuchMethodException/classInfo/getConstructor.java:
+	Updated (c) year.
+
 2014-04-24  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/NoSuchMethodException/classInfo/getSuperclass.java:
