--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2014-04-29  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/NoSuchMethodException/classInfo/getConstructors.java:
+	* testlet/java/lang/NoSuchMethodException/classInfo/getDeclaredAnnotations.java:
+	* testlet/java/lang/NoSuchMethodException/classInfo/getDeclaredClasses.java:
+	* testlet/java/lang/NoSuchMethodException/classInfo/getEnclosingClass.java:
+	* testlet/java/lang/NoSuchMethodException/classInfo/getEnclosingConstructor.java:
+	* testlet/java/lang/NoSuchMethodException/classInfo/getEnclosingMethod.java:
+	Six new tests added into NoSuchMethodException/classInfo.
+
 2014-04-28  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/NoSuchMethodException/classInfo/getField.java:
